k8s/artech-cms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artech-cms
  namespace: artech
spec:
  replicas: 5
  selector:
    matchLabels:
      app: artech-cms
  template:
    metadata:
      labels:
        app: artech-cms
    spec:
      containers:
        - name: artech-cms
          image: yan22345/artech-cms-api:latest
          ports:
          - containerPort: 8081
            name: artech-cms
