k8s/artech-cms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: artech-cms
  namespace: artech
spec:
  selector:
    app: artech-cms
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
